--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,30 +1,8 @@
 {
-  "name": "Flutter Development",
-  "image": "ghcr.io/cirruslabs/flutter:latest",
+  "name": "Ubuntu Codespace",
+  "image": "mcr.microsoft.com/devcontainers/base:ubuntu",
   "features": {
-    "ghcr.io/devcontainers/features/java:1": {
-      "version": "17",
-      "installGradle": true
-    },
-    "ghcr.io/devcontainers/features/android:1": {}
+    "ghcr.io/devcontainers/features/common-utils:2": {}
   },
-  "forwardPorts": [
-    8080
-  ],
-  "customizations": {
-    "vscode": {
-      "extensions": [
-        "Dart-Code.flutter",
-        "Dart-Code.dart-code"
-      ],
-      "settings": {
-        "dart.flutterSdkPath": "/opt/flutter",
-        "dart.sdkPath": "/opt/flutter/bin/cache/dart-sdk"
-      }
-    }
-  },
-  "remoteEnv": {
-    "FLUTTER_ROOT": "/opt/flutter",
-    "PATH": "${PATH}:/opt/flutter/bin"
-  }
+  "postCreateCommand": "sudo apt update && sudo apt upgrade -y"
 }
